# salvo-starter

./: .env  Cargo.toml  README.md
config/: config.yml
data/: demo.db
src/: app_error.rs  app_writer.rs  config.rs  db.rs  main.rs
src/middleware/: jwt.rs
src/routers/: mod.rs  user.rs
src/services/: user.rs
src/utils/: rand_utils.rs
