[package]
name = "salvo_api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { version = "0.5.3", features = [] }
clia-tracing-config = "0.2.7"
jsonwebtoken = "9.3.0"
rand = { version = "0.8.5", features = [] }
salvo = { version = "0.76.1", features = [
    "logging",
    "cors",
    "oapi",
    "jwt-auth",
    "rustls",
    "catch-panic",
    "cookie"
] }
serde = "1.0.217"
serde_yml = "0.0.12"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "macros", "sqlite"] }
thiserror = "2.0.11"
jiff = "0.1.27"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.11.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
validator = { version = "0.19", features = ["derive"] }
envie = "0.2.0"

[profile.release]
lto = "fat"
opt-level = "z"
debug = 0
overflow-checks = false
panic = "abort"
codegen-units = 1
